@@ -38,7 +38,7 @@ STORED_ENUM_MAP(delete_target_type_map, delete_entry::Files,
 
 void delete_entry::load(std::istream & is, const version & version) {
 	
-	if(version < INNO_VERSION(1, 3, 21)) {
+	if(version < INNO_VERSION(1, 3, 0)) {
 		(void)util::load<boost::uint32_t>(is); // uncompressed size of the entry
 	}
 	
