@@ -47,7 +47,7 @@ STORED_FLAGS_MAP(stored_inno_directory_options_1,
 
 void directory_entry::load(std::istream & is, const version & version) {
 	
-	if(version < INNO_VERSION(1, 3, 21)) {
+	if(version < INNO_VERSION(1, 3, 0)) {
 		(void)util::load<boost::uint32_t>(is); // uncompressed size of the entry
 	}
 	
