@@ -42,7 +42,7 @@ STORED_FLAGS_MAP(stored_ini_flags,
 
 void ini_entry::load(std::istream & is, const version & version) {
 	
-	if(version < INNO_VERSION(1, 3, 21)) {
+	if(version < INNO_VERSION(1, 3, 0)) {
 		(void)util::load<boost::uint32_t>(is); // uncompressed size of the entry
 	}
 	
